service_yaml/deployment/00.gateway/skims-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: skims-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs
spec:
  hosts:
  - skims-msa.com
  gateways:
  - skims-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: service-skims-frontend-api
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: udw-vs
spec:
  hosts:
  - skims-msa.com
  gateways:
  - skims-gateway
  http:
  - match:
    - uri:
        prefix: /udw
    route:
    - destination:
        host: service-skims-udw-api
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pln-vs
spec:
  hosts:
  - skims-msa.com
  gateways:
  - skims-gateway
  http:
  - match:
    - uri:
        prefix: /pln
    route:
    - destination:
        host: service-skims-pln-api.default.svc.cluster.local     
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pay-vs
spec:
  hosts:
  - skims-msa.com
  gateways:
  - skims-gateway
  http:
  - match:
    - uri:
        prefix: /pay
    route:
    - destination:
        host: service-skims-pay-api.default.svc.cluster.local     
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: igd-vs
spec:
  hosts:
  - skims-msa.com
  gateways:
  - skims-gateway
  http:
  - match:
    - uri:
        prefix: /igd
    route:
    - destination:
        host: service-skims-igd-api.default.svc.cluster.local      
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fin-vs
spec:
  hosts:
  - skims-msa.com
  gateways:
  - skims-gateway
  http:
  - match:
    - uri:
        prefix: /fin
    route:
    - destination:
        host: service-skims-fin-api.default.svc.cluster.local                   
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cus-vs
spec:
  hosts:
  - skims-msa.com
  gateways:
  - skims-gateway
  http:
  - match:
    - uri:
        prefix: /cus
    route:
    - destination:
        host: service-skims-cus-api.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cnr-vs
spec:
  hosts:
  - skims-msa.com
  gateways:
  - skims-gateway
  http:
  - match:
    - uri:
        prefix: /cnr
    route:
    - destination:
        host: service-skims-cnr-api.default.svc.cluster.local
---
